lib/GSL/Special/expint.h

int gsl_sf_expint_E1_e(double x,double* result);
double gsl_sf_expint_E1(double x);
int gsl_sf_expint_E2_e(double x,double* result);
double gsl_sf_expint_E2(double x);
int gsl_sf_expint_E1_scaled_e(double x,double* result);
double gsl_sf_expint_E1_scaled(double x);
int gsl_sf_expint_E2_scaled_e(double x,double* result);
double gsl_sf_expint_E2_scaled(double x);
int gsl_sf_expint_Ei_e(double x,double* result);
double gsl_sf_expint_Ei(double x);
int gsl_sf_expint_Ei_scaled_e(double x,double* result);
double gsl_sf_expint_Ei_scaled(double x);
int gsl_sf_Shi_e(double x,double* result);
double gsl_sf_Shi(double x);
int gsl_sf_Chi_e(double x,double* result);
double gsl_sf_Chi(double x);
int gsl_sf_expint_3_e(double x,double* result);
double gsl_sf_expint_3(double x);
int gsl_sf_Si_e(double x,double* result);
double gsl_sf_Si(double x);
int gsl_sf_Ci_e(double x,double* result);
double gsl_sf_Ci(double x);
int gsl_sf_atanint_e(double x,double* result);
double gsl_sf_atanint(double x);